# flip-jump

./: .flake8  .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  _pr_replies.py  a.fjm  build_fjcore.py  calc.fjm  conventions.txt  flipjump_1.5.0_finishup_handoff.md  flipjump_claude_conclusions.md  pyproject.toml  quine16.fj  requirements.txt  setup.py  test_parallel  test_parallel.bat  tox.ini
.github/workflows/: codeql-analysis.yml  compiler-bench.yml  poetry-publish.yml  tests.yml  wheels.yml
.run/: pytest all compile.run.xml  pytest all.run.xml  pytest unittests.run.xml
assembler/: main.py  preprocessor.py
fjms/: hello_world.fjm  quine16.fjm
flipjump/: README.md  __init__.py  flipjump_cli.py  flipjump_quickstart.py  lut_generator.py
flipjump/assembler/: __init__.py  assembler.py  fj_parser.py  preprocessor.py
flipjump/debugging/: breakpoints.py  macro_usage_graph.py
flipjump/fjm/: __init__.py  fjm_consts.py  fjm_reader.py  fjm_writer.py
flipjump/inner_classes/: expr.py  ops.py
flipjump/interpreter/: __init__.py  _fjcore.c  fjm_run.py
flipjump/interpretter/: __init__.py  _fjcore.c  fjm_run.py
flipjump/io_devices/: BrokenIO.py  FixedIO.py  StandardIO.py
flipjump/stl/: README.md  casting.fj  conf.json  mathlib.fj  ptrlib.fj  runlib.fj
flipjump/utils/: __init__.py  classes.py  constants.py  exceptions.py  functions.py
ide-extensions/pycharm/: fj-pycharm-def-finder.ahk
interpreter/: CMakeLists.txt  defs.h  main.cpp
programs/: README.md  calc.fj  pair_ns.fj  prime_sieve.fj  quine16.fj
programs/catalog/: CATALOG.md  CONVENTIONS.md  HANDOFF.md  HANDOFF_PASS4.md  README.md
programs/concept_checks/: README.md  bit_ptr.fj  casting.fj  hex_ptr.fj  pair_ns.fj  ptr.fj  segments.fj
programs/func_tests/: README.md  func1.fj  func2.fj  func3.fj  func4.fj  func5.fj  func6.fj  func7.fj
programs/hexlib_tests/: README.md
programs/multi_comp/: README.md  a.fj  a_no_stl.fj  b.fj  c.fj  defs.fj
programs/pair_ns_tests/: README.md  test1.fj  test2.fj  test3.fj
programs/print_tests/: README.md  cat.fj  hello_no-stl.fj  hello_world.fj  hello_world_with_str.fj  hex_print_dec.fj  hexprint.fj  ncat.fj  print_as_digit.fj  print_dec.fj  print_hex_int.fj  print_int_preserves_input.fj
programs/sanity_checks/: README.md  macro_ascii_bin.fj  macro_bit_pointer.fj  macro_dec.fj  macro_hex_comp.fj  macro_hex_input.fj  macro_hex_minmax.fj  macro_hex_mul.fj  macro_logic.fj  macro_mul.fj  macro_rep_hygiene.fj  macro_rotate.fj  math_operators.fj  mathbit.fj  mathvec.fj  not.fj  rep.fj  simple.fj  startup_init_all.fj  testbit.fj  testbit_with_nops.fj
programs/simple_math_checks/: README.md  bit_div.fj  div10.fj  nadd.fj  ncmp.fj  series_sum.fj  shra.fj
programs/sorts/: README.md  bubble_sort.fj  hex_bubble_sort.fj
scripts/: add_catalog_program.py  batch01_foundations.py  batch03_arithmetic.py  batch04_arithmetic.py  batch05_arith_loops.py  batch06_io_numbertheory.py  batch07_numbertheory2.py  batch08_numbertheory3.py  batch09_strings.py  batch10_strings2.py  batch11_bits.py  batch12_bits2.py  batch13_bits3.py  cat_branching.py  cat_calendar_time.py  cat_conversion.py  cat_geometry.py  cat_logic.py  cat_loops.py  cat_misc.py  cat_sequences.py  cat_text_processing.py  catalog_arith.py  catalog_register.py  sort_catalog_by_duration.py
src/: README.md  __init__.py  assembler.py  basicio.py  blm.py  breakpoints.py  conftest.py  defs.py  exceptions.py  expr.py  fj.py  fj_parser.py  fja.py  fjc.py  fji.py  fjm.py  fjm_run.py  macro_usage_graph.py  new_assembler.py  ops.py  parser.py  preprocessor.py  run.py  serial.py  test_fj.py  tests.py
src/cpp_fji/: .gitignore  CMakeLists.txt  README.md  fji.cpp  fjmReader.h
src/flipjump/: README.md  fj.py
src/io_devices/: BrokenIO.py  FixedIO.py  IODevice.py  StandardIO.py  io_exceptions.py
src/riscv2fj/: jmp.fj  mem.fj  ops.fj  riscv2fj.py
standard_library/: lib64.fjm
stl/: README.md  bitlib.fj  bitlib.fjm  casting.fj  conf.json  declib.fj  hexlib.fj  iolib.fj  lib64.fj  lib64.fjm  mathlib.fj  ptrlib.fj  riscvlib.fj  runlib.fj  veclib.fj
stl/bit/: casting.fj  cond_jumps.fj  input.fj  logics.fj  math.fj  memory.fj  output.fj  pointers.fj  shifts.fj
stl/hex/: advanced_pointers.fj  cond_jumps.fj  input.fj  logics.fj  math.fj  math_basic.fj  memory.fj  output.fj  pointers.fj  shifts.fj  tables_init.fj
tests/: README.md  __init__.py  benchmark_assembler.py  benchmark_interpreter.py  benchmark_loop.fj  benchmark_results.md  calc.fj  cat.fj  cat.fjc  conf.json  conftest.py  div10.fj  func.fj  hello_no-stl.fj  hello_world.fj  hexlib-basics1.fj  hexlib-basics2.fj  hexlib-mul-div.fj  hexlib.fj  hexlib2.fj  hexlib3.fj  hexlib4.fj  hexprint.fj  mathbit.fj  mathbit.fjc  mathbit.fjm  mathvec.fj  mathvec.fjc  mathvec.fjm  measure_speculation.py  nadd.fj  ncat.fj  ncat.fjc  ncmp.fj  not.fj  not.fjc  not.fjm  pair_ns.fj  print_dec.fj  print_hex_int.fj  (+22 more)
tests/__fj_compiled__/: .gitignore
tests/benchmarks/: benchmark_assembler.py  benchmark_interpreter.py  benchmark_results.md  measure_fjps.py  measure_speculation.py
tests/compiled/: cat.blm  cat__no_macros.fj  mathbit.blm  mathbit__no_macros.fj  mathvec.blm  mathvec__no_macros.fj  ncat.blm  ncat__no_macros.fj  not.blm  not__no_macros.fj  rep.blm  rep__no_macros.fj  testbit.blm  testbit__no_macros.fj  testbit_with_nops.blm  testbit_with_nops__no_macros.fj
tests/inout/: calc.in  calc.out  cat.in  cat.out  div10.out  func.out  hexlib-2params.out  hexlib-basics1.out  hexlib-basics2.out  hexlib-mul-div.out  hexlib.in  hexlib.out  hexlib2.out  ncat.in  pair_ns.out  print_as_digit.out  print_hex_int.out  ptr.out  segments.in  segments.out
tests/tests_tables/: test_compile_catalog.csv  test_compile_fast.csv  test_compile_hexlib.csv  test_compile_medium.csv  test_compile_slow.csv  test_run_catalog.csv  test_run_fast.csv  test_run_hexlib.csv  test_run_medium.csv  test_run_slow.csv
tests/unit/: __init__.py  conftest.py  test_assembler.py  test_breakpoints.py  test_cli.py  test_cli_debugger.py  test_device_memory.py  test_devices_e2e.py  (+16 more)
(+2027 files in other folders)
