[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "flipjump"
version = "1.2.2"
description = "The single instruction language - Flip a bit, then Jump"
authors = ["Tom Herman <flipjumpproject@gmail.com>"]
license = "BSD-2-Clause-Simplified"
readme = "README.md"

include = [
    { path = "flipjump/stl", format = "sdist" }
]

homepage = "https://esolangs.org/wiki/FlipJump"
repository = "https://github.com/tomhea/flip-jump"
documentation = "https://github.com/tomhea/flip-jump/wiki"

keywords = ["esolang", "oisc", "assembly"]
classifiers = [
    "Topic :: Education",
    "Topic :: Software Development :: Assemblers",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Other",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]


[tool.poetry.dependencies]
python = "^3.8.1"
sly = "^0.4"
easygui = "^0.98.3"

# statistics
plotly = { version = "^5.16.1", optional = true }
# developement
pytest = { version = "^7.4.0", optional = true }
pytest-ordering = { version = "^0.6", optional = true }
pytest-xdist = { version = "^3.3.1", optional = true }
mypy = { version = "^1.7.1", optional = true }
flake8 = { version = "^6.1.0", optional = true }
tox = { version = "^4.11.4", optional = true }
bandit = { version = "^1.7.6", optional = true }
black = { version = "^23.12.0", optional = true }

[tool.poetry.extras]
tests = [
    "pytest", "pytest-ordering", "pytest-xdist",
    "mypy", "flake8", "tox", "bandit", "black"
]
stats = ["plotly"]
#docs = [sphinx, sphinx_rtd_theme]

[tool.poetry.scripts]
fj = 'flipjump.flipjump_cli:main'


[tool.mypy]
files = ["flipjump", "tests"]
strict = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "flipjump.assembler.fj_parser"
disable_error_code = ["name-defined", "no-redef", "index", "no-any-return", "misc"]


[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]
safe = true
skip-string-normalization = true
