[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "flipjump"
version = "1.5.0"
description = "The single instruction language - Flip a bit, then Jump"
authors = ["Tom Herman <flipjumpproject@gmail.com>"]
license = "BSD-2-Clause-Simplified"
readme = "README.md"

include = [
    { path = "flipjump/stl", format = "sdist" }
]

homepage = "https://esolangs.org/wiki/FlipJump"
repository = "https://github.com/tomhea/flip-jump"
documentation = "https://github.com/tomhea/flip-jump/wiki"

keywords = ["esolang", "oisc", "assembly"]
classifiers = [
    "Topic :: Education",
    "Topic :: Software Development :: Assemblers",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Other",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]


[tool.poetry.dependencies]
python = "^3.10"
sly = "^0.5"

# statistics
plotly = { version = "^6.8.0", optional = true }
# developement
pytest = { version = "^9.0.3", optional = true }
pytest-ordering = { version = "^0.6", optional = true }
pytest-xdist = { version = "^3.8.0", optional = true }
mypy = { version = "^2.1.0", optional = true }
flake8 = { version = "^7.3.0", optional = true }
tox = { version = "^4.55.1", optional = true }
bandit = { version = "^1.9.4", optional = true }
black = { version = "^26.5.1", optional = true }

[tool.poetry.extras]
tests = [
    "pytest", "pytest-ordering", "pytest-xdist",
    "mypy", "flake8", "tox", "bandit", "black"
]
stats = ["plotly"]
#docs = [sphinx, sphinx_rtd_theme]

[tool.poetry.scripts]
fj = 'flipjump.flipjump_cli:main'


[tool.mypy]
files = ["flipjump", "tests"]
strict = true
# `import-not-found` covers sly — a pure-Python dep
# without a `py.typed` marker, so mypy 2.x flags it. (mypy 1.x used
# `import-untyped` for the same case; kept too so configs from earlier
# checkouts still parse.)
disable_error_code = ["import-untyped", "import-not-found"]

[[tool.mypy.overrides]]
module = "flipjump.assembler.fj_parser"
# `untyped-decorator` covers the SLY `@_(...)` rule decorators —
# adding stubs to SLY itself is out of scope.
disable_error_code = ["name-defined", "no-redef", "index", "no-any-return", "misc", "untyped-decorator"]


[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313", "py314"]
skip-string-normalization = true
