[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "flipjump"
version = "1.5.0"
description = "The single instruction language - Flip a bit, then Jump"
authors = [{ name = "Tom Herman", email = "flipjumpproject@gmail.com" }]
license = { text = "BSD-2-Clause-Simplified" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["esolang", "oisc", "assembly"]
classifiers = [
    "Topic :: Education",
    "Topic :: Software Development :: Assemblers",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Other",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]
dependencies = ["sly>=0.5,<0.6"]

[project.urls]
homepage = "https://fjdocs.tomhe.app/"
repository = "https://github.com/tomhea/flipjump"
documentation = "https://fjdocs.tomhe.app/"

[project.scripts]
fj = "flipjump.flipjump_cli:main"

[project.optional-dependencies]
tests = [
    "pytest>=9.0.3,<10",
    "pytest-ordering>=0.6,<0.7",
    "pytest-xdist>=3.8.0,<4",
    "mypy>=2.1.0,<3",
    "flake8>=7.3.0,<8",
    "tox>=4.55.1,<5",
    "bandit>=1.9.4,<2",
    "black>=26.5.1,<27",
]
io = ["pygame>=2.5,<3"]
stats = ["plotly>=6.8.0,<7"]


[tool.setuptools.packages.find]
include = ["flipjump*"]

[tool.setuptools.package-data]
flipjump = ["stl/conf.json", "stl/*.fj", "stl/bit/*.fj", "stl/hex/*.fj", "stl/hex/pointers/*.fj"]


[tool.mypy]
files = ["flipjump", "tests"]
strict = true
# `import-not-found` covers sly - a pure-Python dep without a `py.typed` marker,
# so mypy 2.x flags it. (mypy 1.x used `import-untyped` for the same case; kept
# too so configs from earlier checkouts still parse.)
disable_error_code = ["import-untyped", "import-not-found"]

[[tool.mypy.overrides]]
module = "flipjump.assembler.fj_parser"
# `untyped-decorator` covers the SLY `@_(...)` rule decorators -
# adding stubs to SLY itself is out of scope.
disable_error_code = ["name-defined", "no-redef", "index", "no-any-return", "misc", "untyped-decorator"]


[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313", "py314"]
skip-string-normalization = true


[tool.cibuildwheel]
# abi3: build once per platform/arch with CPython 3.10 - the wheel covers >= 3.10
build = "cp310-*"
# verify the just-built wheel IN its target env (every os/arch, incl. musllinux & native-arm):
# native engine active + exact op-counts (correctness) + cpu-normalized speed floors. runs the
# installed wheel against the repo's .fj programs ({project} is the checkout). see the script.
test-command = "python {project}/tests/wheel_smoke.py"
